Prevents overflow home

--- a/pages/dev/Home.module.css
+++ b/pages/dev/Home.module.css
@@ -231,6 +231,7 @@
   width: 100%;
   margin: auto;
   position: relative;
+  overflow-x: clip;
 }
 
 .welcome__image {
